--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     
-    "name": "v2_4",
-    "slug": "VitaliiZekter-v2",
+    "name": "v5_05",
+    "slug": "VitaliiZekter-v2_addConditionInStoreStatment_internetAcessv1",
     "privacy":"public",
     "version": "1.0.0",
     "orientation": "portrait",
