--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.18.0",
+    "@react-native-community/netinfo": "^9.3.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
@@ -26,6 +27,7 @@
     "react-native-hyperlink": "^0.0.22",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-shared-preferences": "^1.0.2",
     "react-native-web": "~0.18.10",
     "tailwindcss-react-native": "^1.7.10"
   },
